# news_structurizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  audio_processor.py  evaluate_seamless.py  evaluate_whisper.py  evaluation_results_abilmansplus-whisper-turbo-ksc2_20251020_201906.json  evaluation_results_facebook-seamless-m4t-v2-large_20251020_205332.json  evaluation_results_openai-whisper-large-v3-turbo_20251020_201258.json  generate_dataset_openrouter.py  news_gathering.py  pipeline.py  prompt.txt  prompt_kz.txt  pyproject.toml  requirements-seamless.txt  requirements.txt  ruff.toml  split_dataset.py
classification/: classification_models_one_shot.py  train_scale.py  train_topic.py  training_common.py
data/: dataset_kz_val.json
deploy/: README.md  docker-compose.yml
extractor/: inference.py  requirements.txt  train.py  val.py
news_structurizer/: Dockerfile  docker-compose.yml  setup.sh
research/: README.md
rut5_extractor/: dataset.json  dataset_train.json  dataset_val.json  inference.py  train.py  val.py
scripts/: download_asr_model.py  run_asr_audio.py  run_classify_text.py  run_extract_text.py  run_pipeline_audio.py  run_pipeline_text.py  run_segment_text.py  smoke_imports.py  smoke_imports_ml.py
segmentation/: __init__.py  chunking.py  config.py  crf.py  data_prep.py  dataset.py  inference.py  metrics.py  model.py  requirements.txt  run_inference.py  segment_text.py  soft_break.py  split_dataset.py  train.py  train_segmenter.py
tests/: __init__.py  test_cli.py  test_optional_imports.py  test_recorder_api_health.py  utils.py  (+6 more)
(+128 files in other folders)
